log
Thu 24 Aug 2023 08:09:53 PM UTC: 
 tests:  0|6
total_score: 0/70
1e0a8b8
Thu 24 Aug 2023 08:17:17 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
f4fc11b
Thu 24 Aug 2023 08:19:18 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/time.h:29,
                 from test.c:4:
list.c: In function ‘createList’:
list.c:34:11: error: expected identifier before ‘(’ token
   34 |   list -> NULL;
      |           ^~~~
In file included from test.c:5:
list.c:35:8: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   35 |   list -> size = 0;
      |        ^~
Compilation failed
5e52280
Thu 24 Aug 2023 08:19:50 PM UTC: 
 list.c | 35 +++++++++++------------------------
 1 file changed, 11 insertions(+), 24 deletions(-)
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/time.h:29,
                 from test.c:4:
list.c: In function ‘createList’:
list.c:33:9: error: expected identifier before ‘(’ token
   33 |   list->NULL;
      |         ^~~~
Compilation failed
8b50bef
Thu 24 Aug 2023 08:20:51 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   33 |   list->head = NULL;
      |       ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List *list = (List *)malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
list.c:34:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   34 |   list->tail = 0;
      |       ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List *list = (List *)malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
list.c:35:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   35 |   list->current = NULL;
      |       ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List *list = (List *)malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9271a26
Thu 24 Aug 2023 08:31:03 PM UTC: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:48:24: error: expected expression before ‘void’
   48 |   Node *n = createNode(void *data);
      |                        ^~~~
Compilation failed
08a16e8
Thu 24 Aug 2023 08:31:56 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   33 |   list->head = NULL;
      |       ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List *list = (List *)malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
list.c:34:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   34 |   list->tail = 0;
      |       ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List *list = (List *)malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
list.c:35:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   35 |   list->current = NULL;
      |       ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List *list = (List *)malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f592082
Thu 24 Aug 2023 08:34:07 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:56:8: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   56 |   list -> size;
      |        ^~
Compilation failed
5f9f48f
Thu 24 Aug 2023 08:34:22 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:56:8: error: statement with no effect [-Werror=unused-value]
   56 |   list -> tail;
      |   ~~~~~^~~~~~~
list.c: In function ‘createList’:
list.c:33:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   33 |   list->head = NULL;
      |       ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List *list = (List *)malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
list.c:34:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   34 |   list->tail = 0;
      |       ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List *list = (List *)malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
list.c:35:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   35 |   list->current = NULL;
      |       ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List *list = (List *)malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
dee33ce
Thu 24 Aug 2023 08:35:46 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   33 |   list->head = NULL;
      |       ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List *list = (List *)malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
list.c:34:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   34 |   list->tail = 0;
      |       ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List *list = (List *)malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
list.c:35:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   35 |   list->current = NULL;
      |       ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List *list = (List *)malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ee01557
Thu 24 Aug 2023 08:38:20 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:56:7: error: statement with no effect [-Werror=unused-value]
   56 |   list->tail;
      |   ~~~~^~~~~~
list.c: In function ‘createList’:
list.c:33:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   33 |   list->head = NULL;
      |       ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List *list = (List *)malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
list.c:34:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   34 |   list->tail = 0;
      |       ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List *list = (List *)malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
list.c:35:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   35 |   list->current = NULL;
      |       ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List *list = (List *)malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
712861c
Thu 24 Aug 2023 08:39:05 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:56:7: error: statement with no effect [-Werror=unused-value]
   56 |   list->tail;
      |   ~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
195836f
